--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+/* Navbar */
+.navbar {
+  height: 100%;
+  width: 270px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+
+  overflow-x: hidden;
+  padding-top: 20px;
+  background-color: #f1f2f6;
+  border-right: 1px solid lightgray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-left: 20px;
+}
+
+.logo h2 {
+  margin-left: 5px;
+}
+
+.logo-container {
+  border-bottom: 1px solid lightgray;
+  /* border-bottom-width: 1px; */
+  /* border-style: solid; */
+}
+
+.submenu-title {
+  font-size: 16px;
+  font-weight: bold;
+  /* background-color: black; */
+}
+
+.menu-item {
+  background-color: #f1f2f6;
+}
+
+.navbar a {
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+}
+
+.navbar h3 {
+  padding: 0px 34px 0px 24px;
+  color: black;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+/* Main */
+.main {
+  margin-top: 30px;
+  margin-left: 300px; /* Same as the width of the sidenav */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+  margin-right: 300px;
+}
+
+.search-container {
+  top: 0;
+  position: fixed;
+  background-color: white;
+  padding-bottom: 15px;
+}
+
+.search-box {
+  margin-top: 15px;
+}
+
+.welcome {
+  margin-top: 20px;
+}
+
+/* Preview */
+.preview {
+  margin-top: 30px;
+  width: 270px;
+  top: 0;
+  right: 0;
+  float: right;
+  position: fixed;
+}
+
+.preview a {
+  color: black;
+  margin-left: 30px;
+}
+
+.code {
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
