--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,21 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   padding: 10px;
+  /* align-items: center; */
+}
+.card img {
+  margin: 15px 0px 0px 15px;
 }
 
+.card-title {
+  margin: 15px 0px 0px 15px;
+  font-weight: bold;
+}
+.card-subtitle {
+  margin: 0px 0px 0px 15px;
+  font-size: 16px;
+}
 /* Preview */
 .preview {
   margin-top: 30px;
