--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 /* Navbar */
 .navbar {
   height: 100%;
-  width: 270px;
+  width: 300px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -28,7 +28,7 @@ body {
 }
 .logo-text {
   color: #37a8c7;
-  font-size: 22px;
+  font-size: 24px;
   margin-top: 10px;
   font-weight: bold;
 }
@@ -53,19 +53,26 @@ body {
   background-color: #262e3c;
   color: white;
   margin: 0px !important;
+  padding-right: 5px !important;
 }
-.ant-menu-submenu
-  ant-menu-submenu-inline
-  ant-menu-submenu-open
-  ant-menu-submenu-active {
-  color: #37a8c7;
+.ant-menu-submenu-active {
+  color: #37a8c7 !important;
+  /* margin-right: 30px; */
 }
+
+.ant-menu-submenu-title:hover {
+  color: #37a8c7 !important;
+}
+.ant-menu-submenu-arrow {
+  right: 30px !important;
+}
+
 .ant-menu-submenu-arrow::before {
-  margin-right: 10px;
+  margin-right: 20px !important;
   color: white;
 }
 .ant-menu-submenu-arrow::after {
-  margin-right: 10px;
+  margin-right: 20px;
   color: white;
 }
 
@@ -79,6 +86,9 @@ body {
   margin-left: 30px;
   color: white;
 }
+.navbar a:hover {
+  color: #37a8c7;
+}
 h3 {
   margin: 0px !important;
 }
@@ -86,10 +96,10 @@ h3 {
 /* Main */
 .main {
   margin-top: 30px;
-  margin-left: 300px; /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
+  margin-left: 330px; /* Same as the width of the sidenav */
+  font-size: 16px; /* Increased text to enable scrolling */
   padding: 0px 10px;
-  margin-right: 300px;
+  margin-right: 330px;
 }
 
 .search-container {
@@ -131,8 +141,8 @@ h3 {
 }
 /* Preview */
 .preview {
-  margin-top: 30px;
-  width: 270px;
+  margin-top: 15px;
+  width: 300px;
   top: 0;
   right: 0;
   float: right;
