--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 * {
   margin: 0px;
 }
+
+html,
 body {
-  font-family: fantasy;
+  font-family: sans-serif !important;
 }
 
 /* Navbar */
@@ -10,7 +12,7 @@ body {
   height: 100%;
   width: 300px;
   position: fixed;
-  z-index: 1;
+  z-index: 99;
   top: 0;
   left: 0;
 
@@ -98,7 +100,7 @@ h3 {
   margin-top: 30px;
   margin-left: 330px; /* Same as the width of the sidenav */
   font-size: 16px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+  padding: 0px 10px 3px 10px;
   margin-right: 330px;
 }
 
@@ -107,10 +109,17 @@ h3 {
   position: fixed;
   background-color: white;
   padding-bottom: 15px;
+  z-index: 99;
 }
 
 .search-box {
   margin-top: 15px;
+  background-color: white;
+  width: 100%;
+}
+
+.search-box input {
+  background-color: white;
 }
 
 .welcome {
@@ -118,15 +127,16 @@ h3 {
 }
 
 .card {
-  width: 600px;
+  width: 500px;
   height: 150px;
   margin: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
   padding: 10px;
   /* align-items: center; */
 }
+
 .card img {
   margin: 15px 0px 0px 15px;
 }
@@ -139,9 +149,36 @@ h3 {
   margin: 0px 0px 0px 15px;
   font-size: 16px;
 }
+
+.box-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 70px;
+}
+
+.box {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-text-left p {
+  margin: 0px 0px 0px 10px;
+}
+
+.box-text-right p {
+  margin: 0px 10px 0px 0px;
+  text-align: right;
+}
+
 /* Preview */
 .preview {
-  margin-top: 15px;
+  margin-top: 75px;
   width: 300px;
   top: 0;
   right: 0;
@@ -154,7 +191,14 @@ h3 {
   margin-left: 30px;
 }
 
+.ant-anchor-link-title-active {
+  color: #37a8c7 !important;
+}
 .code {
   background-color: black;
   color: white;
+}
+
+.ant-anchor-ink-ball {
+  border-color: #37a8c7 !important;
 }
