--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ h3 {
   width: 500px;
   height: 150px;
   margin: 10px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
   flex-direction: row !important;
   padding: 10px;
@@ -144,6 +144,7 @@ h3 {
 .card-title {
   margin: 15px 0px 0px 15px;
   font-weight: bold;
+  font-size: 25px;
 }
 .card-subtitle {
   margin: 0px 0px 0px 15px;
