--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  font-family: sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 /* Navbar */
@@ -128,13 +128,16 @@ h3 {
 
 .card {
   width: 500px;
-  height: 150px;
+  height: 200px;
   margin: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.card-container {
   display: flex;
   flex-direction: row !important;
   padding: 10px;
   /* align-items: center; */
+  /* justify-content: center; */
 }
 
 .card img {
@@ -143,7 +146,7 @@ h3 {
 
 .card-title {
   margin: 15px 0px 0px 15px;
-  font-weight: bold;
+  font-weight: 550;
   font-size: 25px;
 }
 .card-subtitle {
