--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0px;
 }
@@ -5,29 +7,14 @@
 html,
 body {
   font-family: "Inter", sans-serif !important;
-}
-
-/* Navbar */
-.navbar {
-  height: 100%;
-  width: 300px;
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-
   overflow-x: hidden;
-  padding-top: 20px;
-  background-color: #262e3c;
-  border-right: 1px solid lightgray;
 }
 
-.logo {
-  display: flex;
-  margin-left: 30px;
-  /* justify-content: center; */
-  align-items: center;
+p{
+  font-size: 16px;
 }
+
+
 .logo-text {
   color: #37a8c7;
   font-size: 24px;
@@ -48,54 +35,6 @@ body {
   text-align: center;
 }
 
-.ant-menu-submenu-title {
-  padding-left: 30px !important;
-  font-size: 18px;
-  font-weight: 500;
-  background-color: #262e3c;
-  color: white;
-  margin: 0px !important;
-  padding-right: 5px !important;
-}
-.ant-menu-submenu-active {
-  color: #37a8c7 !important;
-  /* margin-right: 30px; */
-}
-
-.ant-menu-submenu-title:hover {
-  color: #37a8c7 !important;
-}
-.ant-menu-submenu-arrow {
-  right: 30px !important;
-}
-
-.ant-menu-submenu-arrow::before {
-  margin-right: 20px !important;
-  color: white;
-}
-.ant-menu-submenu-arrow::after {
-  margin-right: 20px;
-  color: white;
-}
-
-.ant-menu-item {
-  background-color: #262e3c !important;
-}
-.ant-menu-item:hover {
-  color: #37a8c7 !important;
-}
-.ant-menu-item-active {
-  color: #37a8c7 !important;
-}
-
-.ant-menu-item-selected::after {
-  opacity: 0 !important;
-}
-
-.menu-item {
-  background-color: #262e3c;
-  color: white !important;
-}
 
 .navbar a {
   font-size: 18px;
@@ -232,4 +171,65 @@ h3 {
 
 .anchor {
   margin-top: 50px;
+}
+.logo {
+  float: left;
+  position: relative;
+  top: 6px;
+}
+.ant-layout-sider{
+  background-color: #f5f5f5;
+}
+.ant-menu-submenu-title .anticon{
+  font-size: 18px !important;
+}
+.ant-menu{
+  background-color: #f5f5f5;
+  font-size: 16px !important;
+  font-weight: 400;
+}
+.ant-layout{
+  background-color: #ffffff;
+}
+
+
+.ant-layout-header, .ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub, .ant-menu.ant-menu-dark .ant-menu-sub{
+  background: #1b262c !important;
+}
+.table-content{
+  background-color: #f5f5f5;
+  margin-bottom: 0px !important;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 24px 0px 10px 24px;
+}
+.img-responsive{
+  width: 100%;
+}
+.document-title{
+  font-size: 30px;
+  font-weight: 800;
+}
+.container{
+  width: 70%;
+  margin: 0px auto;
+}
+.welcome-doc{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 250px;
+}
+.document-category{
+  background-color: #f5f5f5;
+  padding: 25px;
+  border-radius: 8px;
+  border: 4px solid #ffffff;
+  box-shadow: rgba(158, 158, 158, 0.2) 0px 8px 24px;
+}
+
+.document-category h2{
+  margin-bottom: 0px ;
+  text-align: center;
+  font-weight: 800;
 }
