--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0px;
@@ -10,16 +10,20 @@ body {
   overflow-x: hidden;
 }
 
-p{
+p {
   font-size: 16px;
 }
-
 
 .logo-text {
   color: #37a8c7;
   font-size: 24px;
   margin-top: 10px;
   font-weight: bold;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .guide {
@@ -34,58 +38,6 @@ p{
   color: white;
   text-align: center;
 }
-
-<<<<<<< HEAD
-.ant-menu-submenu-title {
-  padding-left: 30px !important;
-  font-size: 18px;
-  font-weight: 500;
-  background-color: #262e3c;
-  color: white;
-  margin: 0px !important;
-  padding-right: 5px !important;
-}
-.ant-menu-submenu-active {
-  color: #37a8c7 !important;
-  
-}
-
-.ant-menu-submenu-title:hover {
-  color: #37a8c7 !important;
-}
-.ant-menu-submenu-arrow {
-  right: 30px !important;
-}
-
-.ant-menu-submenu-arrow::before {
-  margin-right: 20px !important;
-  color: white;
-}
-.ant-menu-submenu-arrow::after {
-  margin-right: 20px;
-  color: white;
-}
-
-.ant-menu-item {
-  background-color: #262e3c !important;
-}
-.ant-menu-item:hover {
-  color: #37a8c7 !important;
-}
-.ant-menu-item-active {
-  color: #37a8c7 !important;
-}
-
-.ant-menu-item-selected::after {
-  opacity: 0 !important;
-}
-
-.menu-item {
-  background-color: #262e3c;
-  color: white !important;
-}
-=======
->>>>>>> origin/development
 
 .navbar a {
   font-size: 18px;
@@ -208,6 +160,14 @@ h3 {
   margin-left: 30px;
 }
 
+.header-menu-item:hover {
+  background-color: #1b262c !important;
+}
+
+/* .ant-menu-item-selected {
+  background-color: #1b262c !important;
+} */
+
 .ant-anchor-link-title-active {
   color: #37a8c7 !important;
 }
@@ -228,50 +188,61 @@ h3 {
   position: relative;
   top: 6px;
 }
-.ant-layout-sider{
+.ant-layout-sider {
   background-color: #f5f5f5;
 }
-.ant-menu-submenu-title .anticon{
+.ant-menu-submenu-title .anticon {
   font-size: 18px !important;
 }
-.ant-menu{
+.ant-menu {
   background-color: #f5f5f5;
   font-size: 16px !important;
   font-weight: 400;
 }
-.ant-layout{
+.ant-layout {
   background-color: #ffffff;
 }
 
+.ant-layout-footer {
+  background-color: #ffffff;
+}
 
-.ant-layout-header, .ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub, .ant-menu.ant-menu-dark .ant-menu-sub{
+.single-page-container {
+  width: 90%;
+  margin: auto;
+}
+
+.ant-layout-header,
+.ant-menu.ant-menu-dark,
+.ant-menu-dark .ant-menu-sub,
+.ant-menu.ant-menu-dark .ant-menu-sub {
   background: #1b262c !important;
 }
-.table-content{
+.table-content {
   background-color: #f5f5f5;
   margin-bottom: 0px !important;
   font-size: 20px;
   font-weight: 700;
   padding: 24px 0px 10px 24px;
 }
-.img-responsive{
+.img-responsive {
   width: 100%;
 }
-.document-title{
+.document-title {
   font-size: 30px;
   font-weight: 800;
 }
-.container{
+.container {
   width: 70%;
   margin: 0px auto;
 }
-.welcome-doc{
+.welcome-doc {
   display: flex;
   justify-content: center;
   flex-direction: column;
   min-height: 250px;
 }
-.document-category{
+.document-category {
   background-color: #f5f5f5;
   padding: 25px;
   border-radius: 8px;
@@ -279,8 +250,8 @@ h3 {
   box-shadow: rgba(158, 158, 158, 0.2) 0px 8px 24px;
 }
 
-.document-category h2{
-  margin-bottom: 0px ;
+.document-category h2 {
+  margin-bottom: 0px;
   text-align: center;
   font-weight: 800;
 }
